--- a/Sentiment-Product-Recommendation-Analysis-KshamaJha.ipynb
+++ b/Sentiment-Product-Recommendation-Analysis-KshamaJha.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Reading the dataset\n",
-    "df = pd.read_csv(\"sample30.csv\", parse_dates = False)"
+    "df = pd.read_csv(\"./dataset/sample30.csv\", parse_dates = False)"
    ]
   },
   {
